Finished contact.html and resume.html

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 									class="hvr-sweep-to-bottom"><i class="fa fa-comments" aria-hidden="true"></i><span>Contact</span></a>
 							</li>
 							<li class="col-6 col-sm-3 ui-menu-color-download list-inline-item menuitem">
-								<a href="#"
+								<a href="assets/cv/cv.pdf" target="_blank" 
 									class="hvr-sweep-to-bottom"><i class="fa fa-download" aria-hidden="true"></i><span>Download</span></a>
 							</li>
 						</ul>
@@ -174,7 +174,7 @@
 				<h5 class="uppercase general-sub">Download</h5>
 				<p class="inline-block">
 					Need a printable version of my CV? Download it here.
-					<a href="#" target="_blank" class="cv-pdf hvr-pulse">
+					<a href="assets/cv/cv.pdf" target="_blank" class="cv-pdf hvr-pulse">
 						<i class="fa fa-download" aria-hidden="true"></i>
 						<span class="sr-only">Download link.</span>
 					</a>
@@ -184,37 +184,37 @@
 				<h5 class="uppercase general-sub">Social</h5>
 				<ul class="list-inline social-links">
 					<li class="list-inline-item">
-						<a href="#" target="_blank">
+						<a href="https://www.facebook.com/alex.magnusson.77" target="_blank">
 							<i class="fab fa-facebook" aria-hidden="true"></i>
 							<span class="sr-only">Facebook</span>
 						</a>
 					</li>
 					<li class="list-inline-item">
-						<a href="#" target="_blank">
+						<a href="https://twitter.com" target="_blank">
 							<i class="fab fa-twitter" aria-hidden="true"></i>
 							<span class="sr-only">Twitter</span>
 						</a>
 					</li>
 					<li class="list-inline-item">
-						<a href="#" target="_blank">
+						<a href="https://www.linkedin.com/in/alexander-magnusson-82577891/" target="_blank">
 							<i class="fab fa-linkedin" aria-hidden="true"></i>
 							<span class="sr-only">Linkedin</span>
 						</a>
 					</li>
 					<li class="list-inline-item">
-						<a href="#" target="_blank">
+						<a href="https://pinterest.com" target="_blank">
 							<i class="fab fa-pinterest" aria-hidden="true"></i>
 							<span class="sr-only">Pinterest</span>
 						</a>
 					</li>
 					<li class="list-inline-item">
-						<a href="#" target="_blank">
+						<a href="https://instagram.com" target="_blank">
 							<i class="fab fa-instagram" aria-hidden="true"></i>
 							<span class="sr-only">Instagram</span>
 						</a>
 					</li>
 					<li class="list-inline-item">
-						<a href="#" target="_blank">
+						<a href="https://youtube.com" target="_blank">
 							<i class="fab fa-youtube" aria-hidden="true"></i>
 							<span class="sr-only">Youtube</span>
 						</a>
