--- a/contact.html
+++ b/contact.html
@@ -43,7 +43,7 @@
 									class="hvr-sweep-to-bottom"><i class="fa fa-comments" aria-hidden="true"></i><span>Contact</span></a>
 							</li>
 							<li class="col-6 col-sm-3 ui-menu-color-download list-inline-item menuitem">
-								<a href="#"
+								<a href="assets/cv/cv.pdf" target="_blank" 
 									class="hvr-sweep-to-bottom"><i class="fa fa-download" aria-hidden="true"></i><span>Download</span></a>
 							</li>
 						</ul>
@@ -52,7 +52,26 @@
 			</div>
 		</div>
 	</header>
-	<section>
+	<section class="container-fluid">
+		<div class="row bg-color-contact">
+			<div class="col">
+				<h3 class="contact-heading uppercase text-center">Got a project in mind?</h3>
+				<h5 class="uppercase text-center">Let's work together!</h5>
+
+				<div class="center-form">
+					<form>
+						<input type="text" name="name" id="fullame" class="form-control" placeholder="Name" required/>
+						<input type="email" name="email" id="emailaddress" class="form-control" placeholder="Email" required/>
+						<textarea rows="5" name="projectsummary" id="projectsummary" class="form-control" placeholder="Project description" required></textarea>
+						<div class="form-row text-center">
+							<div class="col">
+								<button type="submit" class="btn btn-secondary">Send Project Request</button>
+							</div>
+						</div>
+					</form>
+				</div>
+			</div>
+		</div>
 
 	</section>
 	<footer class="container-fluid">
@@ -68,7 +87,7 @@
 				<h5 class="uppercase general-sub">Download</h5>
 				<p class="inline-block">
 					Need a printable version of my CV? Download it here.
-					<a href="#" target="_blank" class="cv-pdf hvr-pulse">
+					<a href="assets/cv/cv.pdf" target="_blank" class="cv-pdf hvr-pulse">
 						<i class="fa fa-download" aria-hidden="true"></i>
 						<span class="sr-only">Download link.</span>
 					</a>
@@ -78,37 +97,37 @@
 				<h5 class="uppercase general-sub">Social</h5>
 				<ul class="list-inline social-links">
 					<li class="list-inline-item">
-						<a href="#" target="_blank">
+						<a href="https://www.facebook.com/alex.magnusson.77" target="_blank">
 							<i class="fab fa-facebook" aria-hidden="true"></i>
 							<span class="sr-only">Facebook</span>
 						</a>
 					</li>
 					<li class="list-inline-item">
-						<a href="#" target="_blank">
+						<a href="https://twitter.com" target="_blank">
 							<i class="fab fa-twitter" aria-hidden="true"></i>
 							<span class="sr-only">Twitter</span>
 						</a>
 					</li>
 					<li class="list-inline-item">
-						<a href="#" target="_blank">
+						<a href="https://www.linkedin.com/in/alexander-magnusson-82577891/" target="_blank">
 							<i class="fab fa-linkedin" aria-hidden="true"></i>
 							<span class="sr-only">Linkedin</span>
 						</a>
 					</li>
 					<li class="list-inline-item">
-						<a href="#" target="_blank">
+						<a href="https://pinterest.com" target="_blank">
 							<i class="fab fa-pinterest" aria-hidden="true"></i>
 							<span class="sr-only">Pinterest</span>
 						</a>
 					</li>
 					<li class="list-inline-item">
-						<a href="#" target="_blank">
+						<a href="https://instagram.com" target="_blank">
 							<i class="fab fa-instagram" aria-hidden="true"></i>
 							<span class="sr-only">Instagram</span>
 						</a>
 					</li>
 					<li class="list-inline-item">
-						<a href="#" target="_blank">
+						<a href="https://youtube.com" target="_blank">
 							<i class="fab fa-youtube" aria-hidden="true"></i>
 							<span class="sr-only">Youtube</span>
 						</a>
